--- a/assignment-4/index.html
+++ b/assignment-4/index.html
@@ -2,7 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="css/style.css">
   <title>Module 4 Solution Starter</title>
+  <head>
+    <body>
+
+    </body>
+  </head>
   <script>
     var names = []; // DO NOT REMOVE
   </script>
